--- a/index.html
+++ b/index.html
@@ -2,74 +2,141 @@
 <html lang="he">
 <head>
 <meta charset="UTF-8" />
-<title>Official Football Event Invitation</title>
+<title>Football Event Invitation</title>
 
 <style>
 :root{
-  --bg1:#0b3d2e; --bg2:#134e4a; --card:#0f172acc;
-  --accent:#e6fffa; --btn:#e5e7eb; --btnText:#064e3b;
+  --green1:#0b3d2e;
+  --green2:#134e4a;
+  --card:#0f172acc;
+  --light:#f8fafc;
+  --dark:#020617;
 }
 *{box-sizing:border-box}
 html,body{
   margin:0; width:100%; height:100%;
-  font-family: "Segoe UI", Arial, sans-serif;
+  font-family:"Segoe UI", Arial, sans-serif;
 }
 body{
-  background: linear-gradient(135deg,var(--bg1),var(--bg2));
+  background:linear-gradient(135deg,var(--green1),var(--green2));
   display:flex; align-items:center; justify-content:center;
   color:#fff;
 }
-.card{
-  width:min(520px,92vw);
-  background: rgba(15,23,42,.7);
-  backdrop-filter: blur(6px);
-  border-radius:16px;
-  padding:36px 40px 28px;
-  box-shadow: 0 20px 60px rgba(0,0,0,.45);
-}
+
+/* Header */
 .header{
-  display:flex; align-items:center; justify-content:space-between;
-  margin-bottom:18px;
+  position:fixed; top:12px; left:16px;
+  display:flex; align-items:center; gap:10px;
 }
-.badge{
-  font-size:12px; letter-spacing:.08em; opacity:.8;
+.logo{
+  width:36px; height:36px;
+  border-radius:50%;
+  background:#16a34a;
+  display:flex; align-items:center; justify-content:center;
+  font-weight:700;
 }
-h1{
-  margin:10px 0 8px; font-size:28px; font-weight:700;
-}
-p{opacity:.92; line-height:1.55}
-.meta{
-  margin-top:14px; font-size:14px; opacity:.85;
-}
-.btn{
-  margin-top:22px; width:100%;
-  padding:14px 18px; font-size:16px; font-weight:600;
-  background: var(--btn); color: var(--btnText);
-  border:none; border-radius:10px; cursor:pointer;
-  transition:.2s;
-}
-.btn:hover{transform:translateY(-1px); background:#f3f4f6}
-.footer{
-  margin-top:14px; font-size:12px; opacity:.7; text-align:center;
+.brand{
+  font-size:14px; font-weight:600; letter-spacing:.5px;
 }
 
-/* Language switcher (subtle, corner) */
+/* Language selector */
 .lang{
-  position:fixed; top:10px; right:12px;
-  font-size:12px; opacity:.7;
+  position:fixed; top:12px; right:14px;
 }
 .lang select{
-  background:transparent; color:#fff; border:1px solid rgba(255,255,255,.35);
-  border-radius:8px; padding:4px 6px;
+  background:#ffffff;
+  color:#000000;
+  border:none;
+  border-radius:8px;
+  padding:5px 8px;
+  font-size:12px;
 }
 
-/* RTL handling */
-.rtl{ direction: rtl; }
+/* Card */
+.card{
+  width:min(560px,94vw);
+  background:rgba(15,23,42,.75);
+  border-radius:16px;
+  padding:38px 42px 30px;
+  box-shadow:0 25px 70px rgba(0,0,0,.5);
+  text-align:center;
+}
+h1{margin:10px 0 8px;font-size:28px}
+p{opacity:.92;line-height:1.6}
+.meta{margin-top:12px;font-size:14px;opacity:.85}
+
+/* Buttons */
+.btn{
+  margin-top:22px;width:100%;
+  padding:14px 18px;
+  font-size:16px;font-weight:600;
+  background:#f8fafc;color:#064e3b;
+  border:none;border-radius:10px;
+  cursor:pointer;
+}
+.btn.secondary{
+  background:transparent;
+  color:#e5e7eb;
+  border:1px solid rgba(255,255,255,.35);
+  margin-top:12px;
+}
+.btn:hover{opacity:.95}
+
+/* Partners */
+.partners{
+  margin-top:26px;
+  font-size:12px;
+  opacity:.75;
+}
+.partners span{
+  margin:0 8px;
+}
+
+/* Footer text */
+.footer{
+  margin-top:14px;
+  font-size:12px;
+  opacity:.65;
+}
+
+/* Modal error */
+.modal{
+  position:fixed; inset:0;
+  background:rgba(0,0,0,.55);
+  display:none; align-items:center; justify-content:center;
+}
+.modal .box{
+  background:#ffffff;
+  color:#020617;
+  padding:26px 28px;
+  border-radius:12px;
+  width:min(360px,90vw);
+  text-align:center;
+}
+.modal button{
+  margin-top:14px;
+  padding:8px 16px;
+  border:none;
+  background:#0b3d2e;
+  color:white;
+  border-radius:8px;
+  cursor:pointer;
+}
+
+/* RTL */
+.rtl{direction:rtl}
 </style>
 </head>
 
 <body>
 
+<!-- Header -->
+<div class="header">
+  <div class="logo">⚽</div>
+  <div class="brand">כדורגל נתניה</div>
+</div>
+
+<!-- Language -->
 <div class="lang">
   <select id="lang">
     <option value="he">עברית</option>
@@ -79,108 +146,74 @@ p{opacity:.92; line-height:1.55}
   </select>
 </div>
 
+<!-- Main card -->
 <div class="card" id="card">
-  <div class="header">
-    <div class="badge" id="badge">OFFICIAL INVITATION</div>
-  </div>
-
   <h1 id="title">הזמנה רשמית לאירוע כדורגל</h1>
-  <p id="line1">הנך מוזמן להשתתף באירוע כדורגל ייחודי בהשתתפות מוזמנים בלבד.</p>
-  <p id="line2"><strong>אנא אשר הגעה כדי לקבל פרטי גישה מלאים.</strong></p>
+  <p id="line1">הנך מוזמן להשתתף באירוע כדורגל ייחודי המאורגן על ידי גוף מקצועי.</p>
+  <p id="line2"><strong>נא לאשר הגעה לצורך קבלת פרטי כניסה.</strong></p>
 
   <div class="meta" id="meta">
-    Location: Confidential • Access: Invitation Only
+    מיקום: נתניה • גישה: למוזמנים בלבד
   </div>
 
   <button class="btn" id="confirm">אישור השתתפות</button>
+  <button class="btn secondary" id="contact">צור קשר</button>
+
+  <div class="partners">
+    שותפים רשמיים:
+    <span>SportOne</span>•
+    <span>National League</span>•
+    <span>PlaySafe</span>
+  </div>
 
   <div class="footer" id="foot">
-    This page is protected • © Event Coordination Office
+    © כדורגל נתניה • כל הזכויות שמורות
+  </div>
+</div>
+
+<!-- Error modal -->
+<div class="modal" id="modal">
+  <div class="box">
+    <h3>שגיאה זמנית</h3>
+    <p>לא ניתן ליצור קשר כעת.<br>אנא נסה שוב מאוחר יותר.</p>
+    <button onclick="closeModal()">סגור</button>
   </div>
 </div>
 
 <audio id="audio" src="ston.mp3"></audio>
 
 <script>
-const t = {
-  he:{
-    rtl:true,
-    badge:"הזמנה רשמית",
-    title:"הזמנה רשמית לאירוע כדורגל",
-    line1:"הנך מוזמן להשתתף באירוע כדורגל ייחודי בהשתתפות מוזמנים בלבד.",
-    line2:"אנא אשר הגעה כדי לקבל פרטי גישה מלאים.",
-    meta:"מיקום: חסוי • גישה: למוזמנים בלבד",
-    confirm:"אישור השתתפות",
-    foot:"עמוד זה מאובטח • © משרד תיאום אירועים"
-  },
-  en:{
-    rtl:false,
-    badge:"OFFICIAL INVITATION",
-    title:"Official Football Event Invitation",
-    line1:"You are invited to attend a private football event with limited access.",
-    line2:"Please confirm your attendance to receive full access details.",
-    meta:"Location: Confidential • Access: Invitation Only",
-    confirm:"Confirm Attendance",
-    foot:"This page is protected • © Event Coordination Office"
-  },
-  fr:{
-    rtl:false,
-    badge:"INVITATION OFFICIELLE",
-    title:"Invitation Officielle à un Événement de Football",
-    line1:"Vous êtes invité à participer à un événement de football privé sur invitation.",
-    line2:"Veuillez confirmer votre présence pour recevoir les détails d’accès.",
-    meta:"Lieu : Confidentiel • Accès : Sur invitation",
-    confirm:"Confirmer la participation",
-    foot:"Page sécurisée • © Bureau de coordination des événements"
-  },
-  ar:{
-    rtl:true,
-    badge:"دعوة رسمية",
-    title:"دعوة رسمية لحدث كرة قدم",
-    line1:"أنت مدعو لحضور حدث كرة قدم خاص بدعوة فقط.",
-    line2:"يرجى تأكيد الحضور للحصول على تفاصيل الدخول الكاملة.",
-    meta:"الموقع: سري • الدخول: بدعوة فقط",
-    confirm:"تأكيد الحضور",
-    foot:"هذه الصفحة محمية • © مكتب تنسيق الفعاليات"
-  }
+const t={
+he:{rtl:true,title:"הזמנה רשמית לאירוע כדורגל",l1:"הנך מוזמן להשתתף באירוע כדורגל ייחודי המאורגן על ידי גוף מקצועי.",l2:"נא לאשר הגעה לצורך קבלת פרטי כניסה.",meta:"מיקום: נתניה • גישה: למוזמנים בלבד",confirm:"אישור השתתפות",contact:"צור קשר",foot:"© כדורגל נתניה • כל הזכויות שמורות"},
+en:{rtl:false,title:"Official Football Event Invitation",l1:"You are invited to attend a professional football event.",l2:"Please confirm attendance to receive access details.",meta:"Location: Netanya • Access: Invitation Only",confirm:"Confirm Attendance",contact:"Contact Us",foot:"© Football Netanya • All rights reserved"},
+fr:{rtl:false,title:"Invitation Officielle à un Événement de Football",l1:"Vous êtes invité à participer à un événement de football professionnel.",l2:"Veuillez confirmer votre présence pour recevoir les détails.",meta:"Lieu : Netanya • Accès : Sur invitation",confirm:"Confirmer la participation",contact:"Nous contacter",foot:"© Football Netanya • Tous droits réservés"},
+ar:{rtl:true,title:"دعوة رسمية لحدث كرة قدم",l1:"أنت مدعو لحضور حدث كرة قدم منظم بشكل احترافي.",l2:"يرجى تأكيد الحضور للحصول על تفاصيل الدخول.",meta:"الموقع: نتانيا • الدخول: بدعوة فقط",confirm:"تأكيد الحضور",contact:"اتصل بنا",foot:"© كرة قدم نتانيا • جميع الحقوق محفوظة"}
 };
 
-const els = {
-  card: document.getElementById("card"),
-  badge: document.getElementById("badge"),
-  title: document.getElementById("title"),
-  line1: document.getElementById("line1"),
-  line2: document.getElementById("line2"),
-  meta: document.getElementById("meta"),
-  confirm: document.getElementById("confirm"),
-  foot: document.getElementById("foot"),
+const els={
+card:card,title:title,line1:line1,line2:line2,meta:meta,confirm:confirm,contact:contact,foot:foot
 };
 
 function applyLang(l){
-  const d = t[l];
-  els.badge.textContent = d.badge;
-  els.title.textContent = d.title;
-  els.line1.textContent = d.line1;
-  els.line2.textContent = d.line2;
-  els.meta.textContent = d.meta;
-  els.confirm.textContent = d.confirm;
-  els.foot.textContent = d.foot;
-  els.card.classList.toggle("rtl", d.rtl);
-  document.documentElement.lang = l;
+ const d=t[l];
+ els.title.textContent=d.title;
+ els.line1.textContent=d.l1;
+ els.line2.textContent=d.l2;
+ els.meta.textContent=d.meta;
+ els.confirm.textContent=d.confirm;
+ els.contact.textContent=d.contact;
+ els.foot.textContent=d.foot;
+ els.card.classList.toggle("rtl",d.rtl);
+ document.documentElement.lang=l;
 }
-
-document.getElementById("lang").addEventListener("change", e=>{
-  applyLang(e.target.value);
-});
-
-// default Hebrew
+lang.onchange=e=>applyLang(e.target.value);
 applyLang("he");
 
-// play on confirm (required by browsers)
-document.getElementById("confirm").onclick = ()=>{
-  document.getElementById("audio").play();
-};
+confirm.onclick=()=>audio.play();
+contact.onclick=()=>modal.style.display="flex";
+function closeModal(){modal.style.display="none";}
 </script>
 
 </body>
 </html>
+
